SERVER-28990 avoid bind on --repair

(cherry picked from commit 8084a0ce51f6af543385e9292d11b6943d6b7cd4)